--- a/index.html
+++ b/index.html
@@ -1,5 +1,39 @@
 <!DOCTYPE html>
-<html>
-    <head><title>Test Page</title></head>
-    <body><h1>Test Page</h1></body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Course Assignment Title Page</title>
+    <meta name= "description" content="Assignment portal for Danielle Varela in WDD 230: Web Frontend Development at Brigham Young University - Idaho""
+    <link href="css/main.css" rel="stylesheet">
+</head>
+<body>
+<header>
+    <img src="images/daniellePic.jpg" alt="picture of Danielle"
+    <h1>Danielle Varela</h1>
+    <h2> WDD 230: Assignment Portal</h2>
+</header>   
+<nav>
+    <ul>
+        <li>Lesson 1 <a href = "Title"></a></li>
+        <li>Lesson 2 <a href= "Title"></a></li>
+        <li>Lesson 3 <a href= "Title"></a></li>
+        <li>Lesson 4 <a href= "Title"></a></li>
+        <li>Lesson 5 <a href= "Title"></a></li>
+        <li>Lesson 6 <a href= "Title"></a></li>
+        <li>Lesson 7 <a href= "Title"></a></li>
+        <li>Lesson 8 <a href= "Title"></a></li>
+        <li>Lesson 9 <a href= "Title"></a></li>
+        <li>Lesson 10 <a href= "Title"></a></li>
+        <li>Lesson 11 <a href= "Title"></a></li>
+
+    </ul>
+</nav>
+<main>
+
+</main>
+<footer>
+&copy; 2023 | Course Assignment Title Page |
+</footer>
+</body>
 </html>
